landmark.css
.landmark-arrow {
  position: absolute;
  bottom: 50%;
  left: 50%;
  margin-bottom: 1px;
  margin-left: 1px;
  transform: translateY(-3.5px);
  transition: .2s;
}

.landmark-arrow.collapsed {
  transform: translateY(0);
  transition: .2s;
}

.landmark-arrow-upper:before, .landmark-arrow-upper:after, .landmark-arrow-lower:before, .landmark-arrow-lower:after {
  content: '';
  position: absolute;
  display: block;
  right: -6px;
  width: 9px;
  height: 2px;
  background: #FFF;
  border-radius: 2px;
  transition: all 0.2s;
}

.landmark-arrow-upper:before, .landmark-arrow-upper:after {
  top: 0px;
  transform: rotate(-45deg);
}

.landmark-arrow-upper:after {
  right: inherit;
  left: -9px;
  transform: rotate(45deg);
}

.landmark-arrow-lower:before, .landmark-arrow-lower:after {
  top: 6px;
  transform: rotate(45deg);
}

.landmark-arrow-lower:after {
  right: inherit;
  left: -9px;
  transform: rotate(-45deg);
}

.collapsed .landmark-arrow-lower:before,
.collapsed .landmark-arrow-lower:after {
  top: 0px;
  transform: rotate(-45deg);
}

.collapsed .landmark-arrow-lower:after {
  transform: rotate(45deg);
}

.landmark-poi {
  position: absolute;
  width: 35px;
  height: 35px;
  background-color: #7ab21e;
  border-radius: 50%;
  cursor: pointer;
  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 6px 0px, rgba(255, 255, 255, 0.3) 0px 1px 0px 0px inset;
}

.landmark-poi::after {
  /* this is used to create the pulse animation */
  content: '';
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: inherit;
  background-color: transparent;
  -webkit-animation: cd-pulse 2s infinite;
  -moz-animation: cd-pulse 2s infinite;
  animation: cd-pulse 2s infinite;
}

@-webkit-keyframes cd-pulse {
  0% {
    -webkit-transform: scale(1);
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0.8);
  }
  50% {
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0.8);
  }
  100% {
    -webkit-transform: scale(1.6);
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0);
  }
}

@-moz-keyframes cd-pulse {
  0% {
    -moz-transform: scale(1);
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0.8);
  }
  50% {
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0.8);
  }
  100% {
    -moz-transform: scale(1.6);
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0);
  }
}

@keyframes cd-pulse {
  0% {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    -o-transform: scale(1);
    transform: scale(1);
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0.8);
  }
  50% {
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0.8);
  }
  100% {
    -webkit-transform: scale(1.6);
    -moz-transform: scale(1.6);
    -ms-transform: scale(1.6);
    -o-transform: scale(1.6);
    transform: scale(1.6);
    box-shadow: inset 0 0 1px 1px rgba(122, 178, 30, 0);
  }
}

.landmark-poi.visited {
  background-color: #999997;
}

.landmark-poi.visited::after {
  /* pulse effect no more active on visited elements */
  display: none;
}

.landmark-poi.landmark-top-right {
  top: 0;
  right: 0;
}

.landmark-poi.landmark-top-left {
  top: -20px;
  left: -20px;
}

